--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,3 +27,9 @@ services:
       - POSTGRES_DB=app
       - POSTGRES_USER=postgres
       - POSTGRES_PASSWORD=password
+
+  front:
+    build: ./frontend
+    ports:
+      - "8080:8080"
+      - "8081:8081"
